# c11fetch

./: .gitignore  INSTALL.md  LICENSE  README.md  meson.build  meson_options.txt
c11fetch/: main.c
c11fetch/plugins/: alpine.c  android.c  arch.c  artix.c  debian.c  devuan.c  fedora.c  gentoo.c  haiku.c  macos.c  manjaro.c  nobara.c  openbsd.c  parabola.c
include/: libsysinfo.h  meson.build
libsysinfo/: env.c  error.c  kernel.c  meson.build  util.c
